YouTube stream button in home and schedule

--- a/_includes/join-button.html
+++ b/_includes/join-button.html
@@ -1,12 +1,11 @@
 <div class="columns container">
 	<div class="column is-one-half"></div>
 	<div class="column">
-		<a href="https://www.crowdcast.io/c/ai-helps-ukraine/">
+		<a href="https://www.youtube.com/@mila-quebecartificialintel8371/streams">
 			<button
 				class="button is-responsive is-link is-large is-rounded is-fullwidth is-light is-primary is-outlined"
-			>
-				Join {{site.data.settings.talk.speaker}}'s talk here and right
-				now!
+        style="background-color:#662e7d; color:#FAFAFA">
+				Join the YouTube stream!
 			</button>
 		</a>
 	</div>
